# showerbot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.amd.migrate  Dockerfile.arm  Dockerfile.arm.migrate  Dockerfile.migrate  README.md  docker-compose.amd.yml  docker-compose.arm.yml  docker-compose.yml  sqlx-data.json  start.sh  wait-for-it.sh
.github/workflows/: docker.arm.yml  docker.yml  release.yml
command-macros/: Cargo.toml
command-macros/src/: lib.rs  util.rs
command-macros/src/base_pagination/: mod.rs
command-macros/src/embed_data/: mod.rs
command-macros/src/has_mods/: mod.rs
command-macros/src/prefix/: mod.rs  options.rs
command-macros/src/slash/: mod.rs
migrations/: 20220513094811_initial.sql
src/: main.rs
src/commands/: mod.rs
src/commands/help/: message.rs  mod.rs
src/commands/osu/: leaderboard.rs  mod.rs
src/commands/utility/: mod.rs  ping.rs  prefix.rs
src/core/: config.rs  logging.rs  mod.rs
src/core/cache/: error.rs  mod.rs  permissions.rs
src/core/commands/: flags.rs  mod.rs  origin.rs
src/core/commands/prefix/: args.rs  command.rs  mod.rs  stream.rs
src/core/commands/slash/: command.rs  mod.rs
src/core/context/: configs.rs  messages.rs  mod.rs
src/core/events/: mod.rs
src/core/events/interaction/: command.rs  mod.rs
src/core/events/message/: mod.rs  parse.rs
src/custom_client/: deser.rs  deserialize.rs  error.rs  mod.rs  score.rs  scores.rs
src/database/: mod.rs
src/database/impls/: configs.rs  maps.rs  mod.rs
src/database/models/: configs.rs  mod.rs
src/embeds/: mod.rs
src/embeds/osu/: leaderboard.rs  mod.rs
src/error/: mod.rs
src/pagination/: leaderboard.rs  mod.rs
src/pp/: mod.rs
src/util/: constants.rs  cow.rs  datetime.rs  emote.rs  matcher.rs  mod.rs  mods_fmt.rs  numbers.rs  osu.rs
src/util/builder/: embed.rs  message.rs
src/util/ext/: application_command.rs  authored.rs  channel.rs  interaction_command.rs  map.rs  message.rs  mod.rs  score.rs
