[package]
name = "showerbot"
version = "2.1.1"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
edition = "2021"
repository = "https://github.com/MaxOhn/showerbot"

[dependencies]
bitflags = { version = "1.0" }
bytes = { version = "1.0" }
command-macros = { path = "./command-macros" }
dotenvy = { version = "0.15" }
eyre = { version = "0.6" }
futures = { version = "0.3", default-features = false }
hashbrown = { version = "0.14" }
http = { version = "0.2" }
hyper = { version = "0.14", default-features = false }
hyper-rustls = { version = "0.23", default-features = false, features = ["http1", "tls12", "tokio-runtime", "webpki-tokio"] }
lazy_static = { version = "1.0" }
leaky-bucket-lite = { version = "0.5" }
once_cell = { version = "1.0" }
radix_trie = { version = "0.2" }
regex = { version = "1.0" }
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", branch = "lazer", default-features = false }
rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp", branch = "next", features = ["async_tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
smallvec = { version = "1.0" }
thiserror = { version = "1.0" }
time = { version = "0.3", features = ["macros", "parsing"] }
tokio = { version = "1.0", default-features = false, features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", default-features = false, features = ["time"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "smallvec", "std", "time", "tracing-log"] }

twilight-gateway = { version = "0.15", features = ["twilight-http"] }
twilight-http = { version = "0.15", default-features = false, features = ["rustls-webpki-roots"] }
twilight-interactions = { git = "https://github.com/MaxOhn/twilight-interactions", branch = "with-help", default-features = false, features = ["derive"] }
twilight-model = { version = "0.15", default-features = false }
twilight-standby = { version = "0.15", default-features = false }
twilight-validate = { version = "0.15" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
